--- a/index.html
+++ b/index.html
@@ -3,13 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Whiskey Drop | Teste a new whiskey every month</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>This is a test</h1>
-    <p>Hello, World!</p>
-    <button>click me</button>
+    <article class="container">
+        <!-- Callout -->
+        <section class="callout">
+            <h1>The finest whiskeys delivered to your doorstep.</h1>
+            <pX class="lead">Sign up today to start receiving the world's best whiskeys every month. <strong>
+            <s>€19.99</s>    <mark> First one is free!</mark> </strong> </pX><br>
+            <button class="btn btn-success btn-lg" >Sign Up!</button>
+            <p class="text-muted"><small>You must be over 18 to sign up to our service. Please drink responsibly</small></p>
+        </section>
+        <!-- /.callout -->
+        <hr>
+
+        <!-- Quotes -->
+        <section class="quotes">
+            <h2 class="text-uppercase">Quotes:</h2>
+            <blockquote class="blockquote">
+                <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
+                <p>- Jane Doe</p>
+            </blockquote>
+            <blockquote class="blockquote">
+                <p>I haven't been sober for months!</p>
+                <p>- Jane Doe</p>
+            </blockquote>
+        </section>
+        <!-- /.quotes -->
+        <hr>
+
+        <!-- Features -->
+        <section class="features">
+            <h2 class="text-uppercase">Features:</h2>
+            <div class="feature">
+                <h3>Feature 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod temp
+                    or incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
+                    exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <button class="btn btn-sm btn-light" >Read More</button>
+
+            </div>
+            <div class="feature">
+                <h3>Feature 2</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <button class="btn btn-sm btn-light" >Read More</button>
+            </div>
+            <div class="feature">
+                <h3>Feature 3</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <button class="btn btn-sm btn-light" >Read More</button>
+            </div>
+        </section>
+        <!-- /.features -->
+        <!-- .monthly-favourites -->
+        <section class="features">
+            <h3>Monthly Favourites</h3>
+            <table class="table">
+            <thead>
+                <tr>
+                <th scope="col">name</th>
+                <th scope="col">origin</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Irish Whiskey</td>
+                    <td>Ireland</td>
+                </tr>
+                <tr>
+                    <td>Scottish Whiskey</td>
+                    <td>Scotland</td>
+                </tr>
+                <tr>
+                    <td>Welsh Whiskey</td>
+                    <td>Wales</td>
+                </tr>
+                <tr>
+                    <td>Canadian Whiskey</td>
+                    <td>Canada</td>
+                </tr>
+                <tr>
+                    <td>American Whiskey</td>
+                    <td>America</td>
+                    </tr>
+            </tbody>
+            </table>
+        </section>
+        <!-- /.monthly-favourites -->
+    </article>
 </body>
 </html>
